feat: 接入通知管理接口与Service JWT
